# BCBSLevyMaster

./: .replit  Dockerfile  README.md  app.py  app2.py  cli.py  direct_district_insert.py  import_levy_sample.py  insert_tax_codes.py  main.py  main2.py  models.py  project_progress.md  pyproject.toml  requirements.txt  routes.py  routes2.py  routes_admin.py  routes_advanced_mcp.py  routes_auth.py  routes_budget_impact.py  routes_data_management.py  routes_examples.py  routes_forecasting.py  routes_glossary.py  routes_historical_analysis.py  routes_levy_audit.py  routes_levy_calculator.py  routes_levy_exports.py  routes_mcp.py  routes_public.py  routes_reports.py  routes_tours.py  seed_historical_rates_minimal.py  seed_minimal_all.py  seed_properties_minimal.py  seed_sample_data.py  setup_production.py  simple_csv_import.py  test_levy_export.py  (+1 more)
docs/: ADMIN_GUIDE.md  API_REFERENCE.md  USER_GUIDE.md  levy_export_parser.md  production_migration_guide.md
static/: sample_property_data.csv  sample_tax_codes.csv
templates/: 404.html  500.html  advanced_historical_analysis.html  advanced_insights.html  base.html  base.html.bak  bill_impact_calculator.html  dashboard.html  district_import.html  enhanced_compliance.html  historical_rates.html  import.html  index.html  levy_calculator.html  levy_calculator.html.bak  mcp_api_status.html  mcp_insights.html  mcp_insights_new.html  minimal_base.html  property_lookup.html  reports.html  simple_404.html  simple_base.html
tests/: conftest.py  test_forecasting.py  test_levy_calculation.py  test_levy_core.py  test_levy_export_parser.py
(+75 files in other folders)
