[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "email-validator>=2.2.0",
    "flask-migrate>=4.1.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "markupsafe>=3.0.2",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.40",
    "statsmodels>=0.14.4",
    "werkzeug>=3.1.3",
    "xlrd>=2.0.1",
    "click>=8.1.8",
    "flask-login>=0.6.3",
]
